fixing z-index on modal

--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -61,10 +61,12 @@ div.yield{
   width: 100%;
   height: 100%;
   background-color: rgba(30,30,30,0.8);
+  z-index: 999;
 }
 
 
-.login_form {
+.login_form,
+.login_form_static {
     display: block;
     width: 400px;
     height: 18em;
@@ -76,4 +78,5 @@ div.yield{
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 1000;
 }
